PAR-1 ABCD25-1 modificar página index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p class="lead">
     La Fase 7: Incluye corrección de errores detectados en producción, mejoras continuas, actualizaciones y adaptaciones a nuevos entornos o necesidades.
     </p>
+    <p> Cambio 1 vinculado a Jira</p>
     <button class="btn btn-danger">Botón (develop) V 2.0</button>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
